--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Ethan Maluhia Roberts</h1>
-						<p>Data Detective. Analytics Adventurer. <br />
+						<p>Data Detective. Analytics Adventurer. Statistics Sage. <br />
 						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a>.</p>
 					</header>
 
@@ -29,9 +29,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#projects">Projects</a></li>
+							<li><a href="#skills">Skills</a></li>
+							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -57,25 +57,36 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<section id="projects" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Projects</h2>
+									<p>Take a look at what I've been working on in Python, R, and Tableau</p>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Sentimental</h3>
+										<p class="skills">R, R Shiny, HTML, Natural Language Processing</p>
+										<p>This R Shiny tool is for blog writers and email marketers to see the sentiment and flow of their writing. The users get sentiment counts along with highlighted words associated with the count, a summary of what they wrote, ratio comparisons of sentiments, a list of ambiguous words to update to make their message more clear, and a writing trajectory which measures message valence by sentence. The report can be exported to HTML for further internal use. (The US Declaration of Independence is a great sample, takes about 21 seconds)</p>
+										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</h4>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Complainalyzer</h3>
+										<p class="skills">Python, Tableau</p>
+										<p>Our goal was to transform the way consumer finance complaints (1.6 GB) from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. Using Tableau, Python, and R, we highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; we continue to predict future complaint trajectories through techniques such as Facebook Prophet and ARIMA; and we offer actionable insights and areas for improvement</p>
+										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button">Project Description</a></h4>									
+										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button">Tableau Dashboards</a></h4>
+										<h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Report" class="button">Results Report</a></h4>
+										<h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Poster" class="button">Results Poster</a></h4>
+
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon solid major style1 fa-gem"></span>
+										<h3>Confusion Matrix Scaler</h3>
+										<p class="skills">R, R Shiny, HTML, Classification</p>
+										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inacurracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
+										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</h4>
 									</li>
 								</ul>
 								<footer class="major">
@@ -86,40 +97,41 @@
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="skills" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+								<h2>SKILLS</h2>
+								<p>Discover the skills section for an overview of my technical proficiencies. This part highlights the specific abilities and knowledge I've acquired, demonstrating my capability to excel in various projects and collaborative efforts</p>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+							<ul class="features">
+								<li>
+									<span class="icon solid major style1 fa-code"></span>
+									<h3>Programming</h3>
+									<p>Python (numpy, pandas, scikit-learn)<br>
+									R, R Shiny<br>
+									SQL, SQLite<br>
+									</p>
+								</li>
+								<li>
+									<span class="icon major style3 fa-paper-plane"></span>
+									<h3>Data</h3>
+									<p>Time Series Analysis<br>
+										Natural Language Processing<br>
+										Machine Learning<br>
+										Statistical Analysis<br>
+										Classification<br>
+										Clustering<br>
+									</p>
+								</li>
+								<li>
+									<span class="icon major style3 fa-paper-plane"></span>
+									<h3>Business</h3>
+									<p>Sales Forecasting<br>
+										Process Analysis & Automation<br>
+										Project Management<br>
+									</p>
+								</li>
+							</ul>
+						</section>
 							</section>
 
 						<!-- Get Started -->
@@ -135,7 +147,7 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
-							</section>
+							</section> -->
 
 					</div>
 
@@ -156,17 +168,14 @@
 								<dt>Phone</dt>
 								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/HaoleHawaiian" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
