--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>About Meg</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I'm Maluhia, I just graduated with a Masters in Analytics from Georgia Tech and I'm working as a Senior Business Analyst and I'm fortunate enough to have been able to use some of that degree in my current role. I've been able to do some machine learning models as well as process analysis for my department and consult with other departments doing the same thing. <br>
+										When working on projects, I like to ask the question 'Based on what?' and I like when the answer is 'Based on the data'. I am motivated by using data to clear up intuition and opinion to make decisions. I want to be in the data, finding out the facts of what the trends are in our customer feedback, predict B whenever A happens, and build the product recommendation system based on more than just what one person heard from a client or competitor. Over the last few years, I have been using machine learning models to reduce our sales forecasting error to less than 2% from around 16%, all based on the data.<br>
+										I'm also motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data.<br>
+										</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul>
