--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									</p>
 								</li>
 								<li>
-									<span class="icon major style3 fa-paper-clipboard"></span>
+									<span class="icon major style5 fa-clipboard"></span>
 									<h3>Business</h3>
 									<p>Sales Forecasting<br>
 										Process Analysis & Automation<br>
