--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>About Meg</h2>
+											<h2>About Me</h2>
 										</header>
 										<p>I'm Maluhia, I just graduated with a Masters in Analytics from Georgia Tech and I'm working as a Senior Business Analyst and I'm fortunate enough to have been able to use some of that degree in my current role. I've been able to do some machine learning models as well as process analysis for my department and consult with other departments doing the same thing. <br>
 										When working on projects, I like to ask the question 'Based on what?' and I like when the answer is 'Based on the data'. I am motivated by using data to clear up intuition and opinion to make decisions. I want to be in the data, finding out the facts of what the trends are in our customer feedback, predict B whenever A happens, and build the product recommendation system based on more than just what one person heard from a client or competitor. Over the last few years, I have been using machine learning models to reduce our sales forecasting error to less than 2% from around 16%, all based on the data.<br>
