--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 										When working on projects, I like to ask the question 'Based on what?' and I like when the answer is 'Based on the data'. I am motivated by using data to clear up intuition and opinion to make decisions. I want to be in the data, finding out the facts of what the trends are in our customer feedback, predict B whenever A happens, and build the product recommendation system based on more than just what one person heard from a client or competitor. Over the last few years, I have been using machine learning models to reduce our sales forecasting error to less than 2% from around 16%, all based on the data.<br>
 										I'm also motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data.<br>
 										</p>
-										<ul class="actions">
+										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
+										</ul> -->
 									</div>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
