--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<section id="projects" class="main special">
 								<header class="major">
 									<h2>Projects</h2>
-									<p>Take a look at what I've been working on in Python, R, and Tableau</p>
+									<p>Take a look at what I've been working on</p>
 								</header>
 								<ul class="features">
 									<li>
@@ -69,18 +69,17 @@
 										<h3>Sentimental</h3>
 										<p class="skills">R, R Shiny, HTML, Natural Language Processing</p>
 										<p>This R Shiny tool is for blog writers and email marketers to see the sentiment and flow of their writing. The users get sentiment counts along with highlighted words associated with the count, a summary of what they wrote, ratio comparisons of sentiments, a list of ambiguous words to update to make their message more clear, and a writing trajectory which measures message valence by sentence. The report can be exported to HTML for further internal use. (The US Declaration of Independence is a great sample, takes about 21 seconds)</p>
-										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</h4>
+										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</a></h4>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Complainalyzer</h3>
-										<p class="skills">Python, Tableau</p>
+										<p class="skills">Python, R, Tableau</p>
 										<p>Our goal was to transform the way consumer finance complaints (1.6 GB) from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. Using Tableau, Python, and R, we highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; we continue to predict future complaint trajectories through techniques such as Facebook Prophet and ARIMA; and we offer actionable insights and areas for improvement</p>
 										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button">Project Description</a></h4>									
-										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button">Tableau Dashboards</a></h4>
+										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button">Tableau Dashboard</a></h4>
 										<h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Report" class="button">Results Report</a></h4>
 										<h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Poster" class="button">Results Poster</a></h4>
-
 									</li>
 									<li>
 										<span class="icon solid major style1 fa-gem"></span>
@@ -135,7 +134,7 @@
 						</section>
 							</section>
 
-						<!-- Get Started -->
+						<!-- Get Started
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Congue imperdiet</h2>
