--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Ethan Maluhia Roberts</h1>
-						<p>Data Detective. Analytics Adventurer. Statistics Sage. <br />
+						<p>Data Detective. Analytics Adventurer. Statistics Sage. <br>
 						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a>.</p>
 					</header>
 
@@ -29,7 +29,8 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#projects">Projects</a></li>
+							<li><a href="#personal_projects">Personal Projects</a></li>
+							<li><a href="#work_projects">Work Projects</a></li>
 							<li><a href="#skills">Skills</a></li>
 							<li><a href="#cta">Contact</a></li>
 						</ul>
@@ -45,10 +46,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I'm Maluhia, I just graduated with a Masters in Analytics from Georgia Tech and I'm working as a Senior Business Analyst and I'm fortunate enough to have been able to use some of that degree in my current role. I've been able to do some machine learning models as well as process analysis for my department and consult with other departments doing the same thing. <br>
-										When working on projects, I like to ask the question 'Based on what?' and I like when the answer is 'Based on the data'. I am motivated by using data to clear up intuition and opinion to make decisions. I want to be in the data, finding out the facts of what the trends are in our customer feedback, predict B whenever A happens, and build the product recommendation system based on more than just what one person heard from a client or competitor. Over the last few years, I have been using machine learning models to reduce our sales forecasting error to less than 2% from around 16%, all based on the data.<br>
-										I'm also motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data.<br>
-										</p>
+										<p>I'm Maluhia, I work as a Senior Business Analyst who loves working on machine learning models as well as process analysis for my department and consult internally with other departments doing the same thing. I use data to clear up intuition and opinion to make decisions. I'm motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data.</p>
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
@@ -58,9 +56,9 @@
 							</section>
 
 						<!-- First Section -->
-							<section id="projects" class="main special">
+							<section id="personal_projects" class="main special">
 								<header class="major">
-									<h2>Projects</h2>
+									<h2>Personal Projects</h2>
 									<p>Take a look at what I've been working on</p>
 								</header>
 								<ul class="features">
@@ -86,7 +84,7 @@
 										<h3>Confusion Matrix Scaler</h3>
 										<p class="skills">R, R Shiny, HTML, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inacurracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
-										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</h4>
+										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</a></h4>
 									</li>
 								</ul>
 								<footer class="major">
@@ -96,30 +94,61 @@
 								</footer>
 							</section>
 
-						<!-- Second Section -->
+						<!-- Work Projects -->
+							<section id="work_projects" class="main">
+								<div class="spotlight">
+									<div class="content">
+										<header class="major">
+											<h2>Work Projects</h2>
+										</header>
+										<p>While my personal work is public, here is some of the more proprietary work I do</p>
+										<h3>Has Results</h3>
+										<ul>
+											<li>Developed, validated, and deployed new time-series machine learning models, reducing average sales forecasting error from +16% to +1.5%</li>
+											<li>Identified waste in the sales forecasting process through data collection, ETL (Extract, Transform, Load) operations, exploration, and financial model prototyping, leading to a more scalable process and reducing time spent on forecasting tasks by 80%</li>
+											<li>Coordinated new Professional Services strategy among accounting, services, and sales operations teams, leading to a 50% reduction in time spent processing so far and a 90% reduction in by-hand errors</li>
+											<li>Developed and implemented A/B tests (DOE) for evaluating the performance of marketing assets, resulting in an increase of click-through rates from 5% to 13% on ads, and 15% to 22% on whitepapers</li>
+											<li>Formalized reporting, centralized data into HubSpot, and created redundancies for regular data quality checks leading to a sales pipeline increase of over 20%, as well as a 541% increase sales leads</li>
+										</ul>
+										<h3>In Progress</h3>
+										<ul>
+											<li>Using classification in product development for a marketing and advertising product</li>
+											<li>Using multiple regression in product development for marketing and advertising forecasts</li>
+											<li>Using clustering for client segmentation</li>
+										</ul>
+									</div>
+								</div>
+							</section>
+						<!-- Skills -->
 							<section id="skills" class="main special">
 								<header class="major">
-								<h2>SKILLS</h2>
+								<h2>Skills</h2>
 								<p>Discover the skills section for an overview of my technical proficiencies. This part highlights the specific abilities and knowledge I've acquired, demonstrating my capability to excel in various projects and collaborative efforts</p>
 								</header>
 							<ul class="features">
 								<li>
 									<span class="icon solid major style1 fa-code"></span>
-									<h3>Programming</h3>
-									<p>Python (numpy, pandas, scikit-learn)<br>
-									R, R Shiny<br>
-									SQL, SQLite<br>
+									<h3>Languages & Technology</h3>
+									<p>Python, NumPy, Pandas, Scikit-Learn<br>
+										R, R Shiny<br>
+										SQL, SQLite<br>
+										Excel, VBA <br>
+										Tableau<br>
+										Power BI<br>
+										Jupyter Notebooks
 									</p>
 								</li>
 								<li>
 									<span class="icon major style3 fa-paper-plane"></span>
 									<h3>Data</h3>
 									<p>Time Series Analysis<br>
+										Exploratory Data Analysis<br>
 										Natural Language Processing<br>
 										Machine Learning<br>
 										Statistical Analysis<br>
 										Classification<br>
 										Clustering<br>
+										ETL Design
 									</p>
 								</li>
 								<li>
@@ -128,6 +157,10 @@
 									<p>Sales Forecasting<br>
 										Process Analysis & Automation<br>
 										Project Management<br>
+										Customer Segmentation<br>
+										Churn Analysis<br>
+										Product Development & Analytics<br>
+										A/B Testing<br>
 									</p>
 								</li>
 							</ul>
