--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper" class="fade-in">
 
 				<!-- Header -->
 					<header id="header" class="alt">
@@ -87,11 +87,11 @@
 										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</a></h4>
 									</li>
 								</ul>
-								<footer class="major">
+								<!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 
 						<!-- Work Projects -->
@@ -187,19 +187,15 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
+							<h2>Get In Touch</h2>
+							<p>I'm always open to new opportunites and collaborations, both personal and professional. Don't hesitate to reach out to me and we can explore how to innovate together.</p>
+							<!-- <ul class="actions">
 								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
+							</ul> -->
+						</section> 
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact Information</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
 								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd>
 							</dl>
