--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+			<div id="wrapper">
 
 				<!-- Header -->
 					<header id="header" class="alt">
@@ -65,15 +65,15 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Sentimental</h3>
-										<p class="skills">R, R Shiny, HTML, Natural Language Processing</p>
-										<p>This R Shiny tool is for blog writers and email marketers to see the sentiment and flow of their writing. The users get sentiment counts along with highlighted words associated with the count, a summary of what they wrote, ratio comparisons of sentiments, a list of ambiguous words to update to make their message more clear, and a writing trajectory which measures message valence by sentence. The report can be exported to HTML for further internal use. (The US Declaration of Independence is a great sample, takes about 21 seconds)</p>
+										<p class="skills">R, R Shiny, Natural Language Processing</p>
+										<p>This R Shiny tool is for blog writers and email marketers to see the sentiment and flow of their writing. The users get sentiment counts along with highlighted words associated with the count, a summary of what they wrote, ratio comparisons of sentiments, a list of ambiguous words to update to make their message more clear, and a writing trajectory which measures message valence by sentence. (The US Declaration of Independence is a great sample, takes about 21 seconds)</p>
 										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</a></h4>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Complainalyzer</h3>
-										<p class="skills">Python, R, Tableau</p>
-										<p>Our goal was to transform the way consumer finance complaints (1.6 GB) from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. Using Tableau, Python, and R, we highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; we continue to predict future complaint trajectories through techniques such as Facebook Prophet and ARIMA; and we offer actionable insights and areas for improvement</p>
+										<p class="skills">Python, R, Tableau, Time Series Analysis, Natural Language Processing</p>
+										<p>Our goal was to transform the way consumer finance complaints from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. We highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; and we continue to predict future complaint trajectories through Facebook Prophet and ARIMA.</p>
 										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button">Project Description</a></h4>									
 										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button">Tableau Dashboard</a></h4>
 										<h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Report" class="button">Results Report</a></h4>
@@ -82,9 +82,9 @@
 									<li>
 										<span class="icon solid major style1 fa-gem"></span>
 										<h3>Confusion Matrix Scaler</h3>
-										<p class="skills">R, R Shiny, HTML, Classification</p>
+										<p class="skills">R, R Shiny, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inacurracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
-										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</a></h4>
+										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Try It</a></h4>
 									</li>
 								</ul>
 								<!-- <footer class="major">
@@ -166,22 +166,6 @@
 							</ul>
 						</section>
 							</section>
-
-						<!-- Get Started
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section> -->
-
 					</div>
 
 				<!-- Footer -->
@@ -197,6 +181,8 @@
 							<h2>Contact Information</h2>
 							<dl class="alt">
 								<dt>Email</dt>
+								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a></dd>
+								<dd><a href="https://github.com/HaoleHawaiian">GitHub</a></dd>
 								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd>
 							</dl>
 							<ul class="icons">
