--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
 								</li>
 							</ul>
 						</section>
-							</section>
 					</div>
 
 				<!-- Footer -->
@@ -180,9 +179,11 @@
 						<section>
 							<h2>Contact Information</h2>
 							<dl class="alt">
-								<dt>Email</dt>
+								<dt>LinkedIn</dt>
 								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a></dd>
+								<dt>GitHub</dt>
 								<dd><a href="https://github.com/HaoleHawaiian">GitHub</a></dd>
+								<dt>Email</dt>
 								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd>
 							</dl>
 							<ul class="icons">
