--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<h3>Confusion Matrix Scaler</h3>
 										<p class="skills">R, R Shiny, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inacurracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
-										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Try It</a></h4>
+										<h4><a href="https://sentimental-post.shinyapps.io/ConfusionMatrixScaler/" class="button">Try It</a></h4>
 									</li>
 								</ul>
 								<!-- <footer class="major">
