--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 							<h2>Contact Information</h2>
 							<dl class="alt">
 								<dt>LinkedIn</dt>
-								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a></dd>
+								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/">https://www.linkedin.com/in/maluhia-roberts/</a></dd>
 								<dt>GitHub</dt>
-								<dd><a href="https://github.com/HaoleHawaiian">GitHub</a></dd>
+								<dd><a href="https://github.com/HaoleHawaiian">https://github.com/HaoleHawaiian</a></dd>
 								<dt>Email</dt>
 								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd>
 							</dl>
