--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>I'm Maluhia, I work as a Senior Business Analyst who loves working on machine learning models as well as process analysis for my department and consult internally with other departments doing the same thing. I use data to clear up intuition and opinion to make decisions. I'm motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data.</p>
+										<p>I'm Maluhia, I love working on machine learning models as well as process analysis and improvement. I use data to clear up intuition and opinion to make decisions. I'm motivated by making a difference with my work. I like when my work gets real results that affect those around me. It takes effort to push a project from ideas formation to production and I don't like to stop my work until its producing useable insights based on data. I have an MS in Analytics from Georgia Institute of Technology and a BS in Computer Science from BYU-Hawai'i.</p>
 										<!-- <ul class="actions">
 											<li><a href="generic.html" class="button">Learn More</a></li>
 										</ul> -->
@@ -74,10 +74,10 @@
 										<h3>Complainalyzer</h3>
 										<p class="skills">Python, R, Tableau, Time Series Analysis, Natural Language Processing</p>
 										<p>Our goal was to transform the way consumer finance complaints from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. We highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; and we continue to predict future complaint trajectories through Facebook Prophet and ARIMA.</p>
-										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button">Project Description</a></h4>									
+										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button">GitHub & Results</a></h4>									
 										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button">Tableau Dashboard</a></h4>
-										<h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Report" class="button">Results Report</a></h4>
-										<h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Poster" class="button">Results Poster</a></h4>
+										<!-- h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Report" class="button">Results Report</a></h4> -->
+										<!-- <h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Poster" class="button">Results Poster</a></h4> -->
 									</li>
 									<li>
 										<span class="icon solid major style1 fa-gem"></span>
