--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
+						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Ethan Maluhia Roberts</h1>
 						<p>Data Detective. Analytics Adventurer. Statistics Sage. <br>
 						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a>.</p>
@@ -32,7 +32,7 @@
 							<li><a href="#personal_projects">Personal Projects</a></li>
 							<li><a href="#work_projects">Work Projects</a></li>
 							<li><a href="#skills">Skills</a></li>
-							<li><a href="#cta">Contact</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -168,7 +168,7 @@
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<footer id="contact">
 						<section>
 							<h2>Get In Touch</h2>
 							<p>I'm always open to new opportunites and collaborations, both personal and professional. Don't hesitate to reach out to me and we can explore how to innovate together.</p>
