--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Ethan Maluhia Roberts</h1>
-						<p>Data Detective. Analytics Adventurer. Statistics Sage. <br>
+						<p>Data Detective. Analytics Adventurer. Statistics Strategist. <br>
 						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a>.</p>
 					</header>
 
