--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 							<section id="personal_projects" class="main special">
 								<header class="major">
 									<h2>Personal Projects</h2>
-									<p>Take a look at what I've been working on</p>
 								</header>
+								<p>Take a look at what I've been working on</p>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
@@ -101,7 +101,7 @@
 										<header class="major">
 											<h2>Work Projects</h2>
 										</header>
-										<p>While my personal work is public, here is some of the more proprietary work I do</p>
+										<p>While my personal work is public, here is some of the more proprietary work I do:</p>
 										<h3>Has Results</h3>
 										<ul>
 											<li>Developed, validated, and deployed new time-series machine learning models, reducing average sales forecasting error from +16% to +1.5%</li>
