--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 										<span class="icon solid major style1 fa-gem"></span>
 										<h3>Confusion Matrix Scaler</h3>
 										<p class="skills">R, R Shiny, Classification</p>
-										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inacurracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
+										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inaccuracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
 										<h4><a href="https://sentimental-post.shinyapps.io/ConfusionMatrixScaler/" class="button">Try It</a></h4>
 									</li>
 								</ul>
@@ -102,7 +102,7 @@
 											<h2>Work Projects</h2>
 										</header>
 										<p>While my personal work is public, here is some of the more proprietary work I do:</p>
-										<h3>Has Results</h3>
+										<h3>Completed</h3>
 										<ul>
 											<li>Developed, validated, and deployed new time-series machine learning models, reducing average sales forecasting error from +16% to +1.5%</li>
 											<li>Identified waste in the sales forecasting process through data collection, ETL (Extract, Transform, Load) operations, exploration, and financial model prototyping, leading to a more scalable process and reducing time spent on forecasting tasks by 80%</li>
@@ -183,8 +183,8 @@
 								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/">https://www.linkedin.com/in/maluhia-roberts/</a></dd>
 								<dt>GitHub</dt>
 								<dd><a href="https://github.com/HaoleHawaiian">https://github.com/HaoleHawaiian</a></dd>
-								<dt>Email</dt>
-								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd>
+								<!-- <dt>Email</dt>
+								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd> -->
 							</dl>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
