--- a/index.html
+++ b/index.html
@@ -180,15 +180,16 @@
 							<h2>Contact Information</h2>
 							<dl class="alt">
 								<dt>LinkedIn</dt>
-								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/">https://www.linkedin.com/in/maluhia-roberts/</a></dd>
+								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/maluhia-roberts/</a></dd>
 								<dt>GitHub</dt>
-								<dd><a href="https://github.com/HaoleHawaiian">https://github.com/HaoleHawaiian</a></dd>
+								<dd><a href="https://github.com/HaoleHawaiian" target="_blank" rel="noopener noreferrer">https://github.com/HaoleHawaiian</a></dd>
 								<!-- <dt>Email</dt>
 								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd> -->
 							</dl>
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/HaoleHawaiian" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/HaoleHawaiian" class="icon brands fa-github alt" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+
 							</ul>
 						</section>
 						<p Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
