--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Ethan Maluhia Roberts</h1>
 						<p>Data Detective. Analytics Adventurer. Statistical Strategist. <br>
-						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/">LinkedIn</a>.</p>
+						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">LinkedIn</a>LinkedIn</a>.</p>
 					</header>
 
 				<!-- Nav -->
@@ -67,15 +67,15 @@
 										<h3>Sentimental</h3>
 										<p class="skills">R, R Shiny, Natural Language Processing</p>
 										<p>This R Shiny tool is for blog writers and email marketers to see the sentiment and flow of their writing. The users get sentiment counts along with highlighted words associated with the count, a summary of what they wrote, ratio comparisons of sentiments, a list of ambiguous words to update to make their message more clear, and a writing trajectory which measures message valence by sentence. (The US Declaration of Independence is a great sample, takes about 21 seconds)</p>
-										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button">Test It Out</a></h4>
+										<h4><a href="https://sentimental-post.shinyapps.io/Sentimental/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Test It Out</span></a></h4>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Complainalyzer</h3>
 										<p class="skills">Python, R, Tableau, Time Series Analysis, Natural Language Processing</p>
 										<p>Our goal was to transform the way consumer finance complaints from the Consumer Finance Protection Bureau (CFPB) database are visualized, understood, and addressed. We highlight patterns and trends in customer complaints using techniques such as LDA, VADER, and Bigram Analysis; and we continue to predict future complaint trajectories through Facebook Prophet and ARIMA.</p>
-										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button">GitHub & Results</a></h4>									
-										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button">Tableau Dashboard</a></h4>
+										<h4><a href="https://github.com/c3vani/cse6242_na_mele_menehune" class="button" target="_blank" rel="noopener noreferrer"><span class="label">GitHub & Results</span></a></h4>									
+										<h4><a href="https://public.tableau.com/app/profile/hillary.latham5228/viz/Complainalyzer/Complainalyzer" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Tableau Dashboard</span></a></h4>
 										<!-- h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Report" class="button">Results Report</a></h4> -->
 										<!-- <h4><a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Complainalyzer%20Results%20Poster" class="button">Results Poster</a></h4> -->
 									</li>
@@ -84,7 +84,7 @@
 										<h3>Confusion Matrix Scaler</h3>
 										<p class="skills">R, R Shiny, Classification</p>
 										<p>This R Shiny tool is for scaling a confusion matrix up or down. I use the Scaler for compensating inaccuracies in a training/testing matrix against a new binary classification prediction. If my accuracy in training/testing is anything other than 100%, I want to be able to break down how many of the Predicted Positives and Predicted Negatives are likely to be False Positives and False Negatives. I use this on sales pipelines, after using classification methods to predict which deals will are likely to be closed won and which are likely to be closed lost.</p>
-										<h4><a href="https://sentimental-post.shinyapps.io/ConfusionMatrixScaler/" class="button">Try It</a></h4>
+										<h4><a href="https://sentimental-post.shinyapps.io/ConfusionMatrixScaler/" class="button" target="_blank" rel="noopener noreferrer"><span class="label">Try It</span></a></h4>
 									</li>
 								</ul>
 								<!-- <footer class="major">
