--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 						<h1>Ethan Maluhia Roberts</h1>
 						<p>Data Detective. Analytics Adventurer. Statistical Strategist. <br>
-						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">LinkedIn</a>LinkedIn</a>.</p>
+						Connect with me on <a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">LinkedIn</a>.</p>
 					</header>
 
 				<!-- Nav -->
