--- a/resume.html
+++ b/resume.html
@@ -23,9 +23,9 @@
 						<section id="content" class="main">
 							<!-- Embed the resume -->
 							<h2>My Resume</h2>
-							<iframe src="path/to/your-resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
+							<iframe src="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
 							<p>If you would like to download my resume, click below:</p>
-							<a href="https://github.com/HaoleHawaiian/haolehawaiian.github.io/blob/main/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a>
+							<a href="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a>
 						</section>
 
 					</div>
