--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										<header class="major">
 											<h2>Work Projects</h2>
 										</header>
-										<p>While my personal work is public, here is some of the more proprietary work I do, or check out my <a href="https://haolehawaiian.github.io/resume.html" target="_blank" rel="noopener noreferrer">resume</a>:</p>
+										<p>While my personal work is public, here is some of the more proprietary work I do: <!-- or check out my <a href="https://haolehawaiian.github.io/resume.html" target="_blank" rel="noopener noreferrer">resume</a>: --></p>
 										<h3>Completed</h3>
 										<ul>
 											<li>Developed, validated, and deployed new time-series machine learning models, reducing average sales forecasting error from +16% to +1.5%</li>
