--- a/resume.html
+++ b/resume.html
@@ -1,69 +1,72 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <title>Ethan Maluhia Roberts Resume</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body class="is-preload">
+	<head>
+		<title>Ethan Maluhia Roberts Resume</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-    <!-- Wrapper -->
-    <div id="wrapper">
-        <!-- Header -->
-        <header id="header">
-            <h1>Ethan Maluhia Roberts Resume</h1>
-        </header>
+		<!-- Wrapper -->
+			<div id="wrapper">
+				<!-- Header -->
+					<header id="header">
+						<h1>Ethan Maluhia Roberts Resume</h1>
+						<!-- <p>Ipsum dolor sit amet nullam</p> -->
+					</header>
 
-        <!-- Main -->
-        <div id="main">
-            <!-- Content -->
-            <section id="content" class="main">
-                <!-- Embed the resume -->
-                <h2>My Resume</h2>
-                <iframe 
-                    src="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" 
-                    width="100%" 
-                    height="600px" 
-                    style="border: none;">
-                </iframe>
-                <p>If you would like to download my resume, click below:</p>
-                <a href="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a>
-            </section>
-        </div>
+				<!-- Main -->
+					<div id="main">
+						<!-- Content -->
+						<section id="content" class="main">
+							<!-- Embed the resume -->
+							<h2>My Resume</h2>
+							<iframe src="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" width="100%" height="600px" style="border: none;"></iframe>
+							<!-- <p>If you would like to download my resume, click below:</p>
+							<a href="https://raw.githubusercontent.com/HaoleHawaiian/haolehawaiian.github.io/main/assets/Ethan%20Maluhia%20Resume.pdf" download="Ethan-Maluhia-Roberts-Resume.pdf" class="button">Download Resume</a> -->
+						</section>
 
-        <!-- Footer -->
-        <footer id="contact">
-            <section>
-                <h2>Get In Touch</h2>
-                <p>I'm always open to new opportunites and collaborations, both personal and professional. Don't hesitate to reach out to me and we can explore how to innovate together.</p>
-            </section> 
-            <section>
-                <h2>Contact Information</h2>
-                <dl class="alt">
-                    <dt>LinkedIn</dt>
-                    <dd><a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/maluhia-roberts/</a></dd>
-                    <dt>GitHub</dt>
-                    <dd><a href="https://github.com/HaoleHawaiian" target="_blank" rel="noopener noreferrer">https://github.com/HaoleHawaiian</a></dd>
-                </dl>
-                <ul class="icons">
-                    <li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
-                    <li><a href="https://github.com/HaoleHawaiian" class="icon brands fa-github alt" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
-                </ul>
-            </section>
-            <p>Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-        </footer>
-    </div>
+					</div>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+				<!-- Footer -->
+					<footer id="contact">
+						<section>
+							<h2>Get In Touch</h2>
+							<p>I'm always open to new opportunites and collaborations, both personal and professional. Don't hesitate to reach out to me and we can explore how to innovate together.</p>
+							<!-- <ul class="actions">
+								<li><a href="generic.html" class="button">Learn More</a></li>
+							</ul> -->
+						</section> 
+						<section>
+							<h2>Contact Information</h2>
+							<dl class="alt">
+								<dt>LinkedIn</dt>
+								<dd><a href="https://www.linkedin.com/in/maluhia-roberts/" target="_blank" rel="noopener noreferrer">https://www.linkedin.com/in/maluhia-roberts/</a></dd>
+								<dt>GitHub</dt>
+								<dd><a href="https://github.com/HaoleHawaiian" target="_blank" rel="noopener noreferrer">https://github.com/HaoleHawaiian</a></dd>
+								<!-- <dt>Email</dt>
+								<dd><a href="alohaethan@yahoo.com">alohaethan@yahoo.com</a></dd> -->
+							</dl>
+							<ul class="icons">
+								<li><a href="https://www.linkedin.com/in/maluhia-roberts/" class="icon brands fa-linkedin alt" target="_blank" rel="noopener noreferrer"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/HaoleHawaiian" class="icon brands fa-github alt" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
 
-</body>
+							</ul>
+						</section>
+						<p Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+					</footer>
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
